; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_ui_companion_event_command.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_ui_companion_event_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (i32, i32)* }
%struct.TYPE_5__ = type { i32 (i32, i32)*, i64 }

@ui_companion = common dso_local global %struct.TYPE_4__* null, align 8
@ui_companion_data = common dso_local global i32 0, align 4
@qt_is_inited = common dso_local global i64 0, align 8
@ui_companion_qt = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@ui_companion_qt_data = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ui_companion_event_command(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** @ui_companion, align 8
  store %struct.TYPE_4__* %4, %struct.TYPE_4__** %3, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = icmp ne %struct.TYPE_4__* %5, null
  br i1 %6, label %7, label %19

7:                                                ; preds = %1
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i32 (i32, i32)*, i32 (i32, i32)** %9, align 8
  %11 = icmp ne i32 (i32, i32)* %10, null
  br i1 %11, label %12, label %19

12:                                               ; preds = %7
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32 (i32, i32)*, i32 (i32, i32)** %14, align 8
  %16 = load i32, i32* @ui_companion_data, align 4
  %17 = load i32, i32* %2, align 4
  %18 = call i32 %15(i32 %16, i32 %17)
  br label %19

19:                                               ; preds = %12, %7, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
